--- a/VlimsApp/ClientApp/src/app/modules/authentication/components/Department/department.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/authentication/components/Department/department.component.html
@@ -71,16 +71,16 @@
   <div class="row p-2">
     <div class="col">
       <div class="p-4 bg-white shadow-dark rounded-2">
-        <p-table [value]="types" tableStyleClass="table table-striped">
+        <table  tableStyleClass="table table-striped">
           <ng-template pTemplate="header">
             <tr>
               <th>S.No</th>
-              <th pSortableColumn="DepartmentName" style="width:20%">Department Name<p-sortIcon field="DepartmentName"></p-sortIcon></th>
-              <th pSortableColumn="DepartmentCode" style="width:10%">Department Code <p-sortIcon field="DepartmentCode"></p-sortIcon></th>
-              <th pSortableColumn="Description" style="width:15%">Comments<p-sortIcon field="Description"></p-sortIcon></th>
-              <th pSortableColumn="RegisteredBy" style="width:20%">Registered by<p-sortIcon field="RegisteredBy"></p-sortIcon></th>
-              <th pSortableColumn="RegisteredOn" style="width:200px">Registered On <p-sortIcon field="RegisteredOn"></p-sortIcon></th>
-              <th pSortableColumn="Status" style="width:200px">Status <p-sortIcon field="Status"></p-sortIcon></th>
+              <th pSortableColumn="DepartmentName" style="width:20%">Department Name</th>
+              <th pSortableColumn="DepartmentCode" style="width:10%">Department Code </th>
+              <th pSortableColumn="Description" style="width:15%">Comments</th>
+              <th pSortableColumn="RegisteredBy" style="width:20%">Registered by</th>
+              <th pSortableColumn="RegisteredOn" style="width:200px">Registered On </th>
+              <th pSortableColumn="Status" style="width:200px">Status </th>
               <th style="width:80px">Actions</th>
 
             </tr>
@@ -92,13 +92,13 @@
               <td>{{doc?.DepartmentCode }}</td>
               <td>{{doc?.Comments}}</td>
               <td>{{doc?.ModifiedBy}}</td>
-              <td>{{doc?.ModifiedDate  | date}}</td>              
-              <td><span class="status" [ngClass]="getStatusClass(doc['Status'])">{{doc.Status}} </span></td>
+              <td>{{doc?.ModifiedDate }}</td>
+              <td><span (click)="getStatusClass(doc['Status'])">{{doc.Status}} </span></td>
               <td class="text-center" (click)="editBrand(doc)"><i class="bi bi-pencil"></i></td>
             </tr>
           </ng-template>
-        </p-table>
+        </table>
       </div>
     </div>
   </div>
-</div>  
+</div>
