--- a/VlimsApp/ClientApp/src/app/modules/authentication/components/Department/department.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/authentication/components/Department/department.component.html
@@ -1,57 +1,4 @@
-<!--<div class="card shadow mb-4" style="padding-top: 2px;">
-    <div class="card-header py-3">
-        <div col-6 style="float: left;">
-        <h6 class="m-0 font-weight-bold text-primary">Department Configuration</h6>
-    </div>
-    <div col-6 style="float: right;">
-        <button class="btn btn-primary"  type="button" [routerLink]="['/mainpage/hierarchy/adddept']"
-      >Add</button>
-    </div>
-    </div>
-<div class="card-body">
 
-  <div class="table-responsive">
-    <table class="table table-bordered" id="dataTable" width="100%" cellspacing="0" *ngIf="types?.length>   0" >
-
-      <thead>
-        <tr>
-          <th scope="col">S.No</th>
-          <th scope="col">Department Name</th>
-          <th scope="col">Department Code</th>
-          <th scope="col">Comments</th>
-          <th scope="col">Registered By</th>
-          <th scope="col">Registered On</th>
-          <th scope="col">Status</th>
-          <th scope="col">Actions</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr *ngFor="let doc of types; let i=index">
-          <th >{{i+1}}</th>
-          <td>{{doc?.DepartmentName}}</td>
-          <td>{{doc?.DepartmentCode }}</td>
-          <td>{{doc?.Comments}}</td>
-          <td>{{doc?.ModifiedBy}}</td>
-          <td>{{doc?.ModifiedDate  | date}}</td>
-          <td>Success</td>
-          <td>
-            <button class="btn" data-toggle="modal" data-target="#exampleModal" [id]="doc.DTID"
-              data-backdrop="static" data-keyboard="false" (click)="editBrand(doc);"> <span
-                class="fa fa-edit"></span> </button>-->
-<!-- <button class="btn"> <span class="fa fa-flag fa-trash" (click)="deleteBrand(i,doc);"></span></button> -->
-<!--</td>
-        </tr>
-      </tbody>
-
-    </table>
-
-  </div>
-
-  <div *ngIf="types?.length==0">
-    <p>No items to display</p>
-  </div>
-</div>
-</div>-->
 <div class="container-fluid">
   <div class="row p-2">
     <div class="col">
@@ -71,7 +18,7 @@
   <div class="row p-2">
     <div class="col">
       <div class="p-4 bg-white shadow-dark rounded-2">
-        <table  tableStyleClass="table table-striped">
+        <!-- <table [value]="types" tableStyleClass="table table-striped"> -->
           <ng-template pTemplate="header">
             <tr>
               <th>S.No</th>
@@ -82,7 +29,6 @@
               <th pSortableColumn="RegisteredOn" style="width:200px">Registered On </th>
               <th pSortableColumn="Status" style="width:200px">Status </th>
               <th style="width:80px">Actions</th>
-
             </tr>
           </ng-template>
           <ng-template pTemplate="body" let-doc let-i="rowIndex">
@@ -97,7 +43,7 @@
               <td class="text-center" (click)="editBrand(doc)"><i class="bi bi-pencil"></i></td>
             </tr>
           </ng-template>
-        </table>
+        <!-- </table> -->
       </div>
     </div>
   </div>
